--- a/client/views/about.html
+++ b/client/views/about.html
@@ -1,7 +1,11 @@
 <template name="about">
- <h3>Mikä tämä on?</h3>
- <p>Sivuston tarkoitus on toimia työkaluna COVID-19 -pandemian trendien pähkäilyyn. Mikä tulee olemaan kasvava, mikä tulee olemaan laskeva ilmiö.</p>
- <p>Sivusto kerää minimaalisen tiedon toiminnassaan. Vastauksia varten selaimesi generoi yksilöllisen tunnuksen, jolla pidetään kirjaa siitä, että mihin kysymyksiin olet jo vastannut.</p>
- <p>Huijaaminen on teknisesti mahdollista, mutta uskomme, että sivuston väärinkäyttö ei maksa vaivaa. Kaikki data on avoimesti sivulla ja sitä voi käyttää haluamallaan tavalla. Lisenssi CC BY 4.0.</p>
- <p>Sivuston lähdekoodit löytyy <a href="https://github.com/savikko/koronatrendit">GitHubista</a>.</p>
+    <h3>Mikä tämä on?</h3>
+    <p>Sivuston tarkoitus on toimia työkaluna COVID-19 -pandemian aikaisten ja jälkeisten trendien pähkäilyyn. Mikä
+        tulee olemaan kasvava, mikä tulee olemaan laskeva ilmiö.</p>
+    <p>Sivusto kerää minimaalisen tiedon toiminnassaan. Vastauksia varten selaimesi generoi yksilöllisen tunnuksen,
+        jolla pidetään kirjaa siitä, että mihin kysymyksiin olet jo vastannut.</p>
+    <p>Huijaaminen on teknisesti mahdollista, mutta uskon, että sivuston väärinkäyttö ei maksa vaivaa. Kaikki data on
+        avoimesti sivulla ja sitä voi käyttää haluamallaan tavalla.</p>
+    <p>Sivuston sisällön lisenssi CC BY 4.0. Lähdekoodit MIT.</p>
+    <p>Sivuston lähdekoodit löytyy <a href="https://github.com/savikko/koronatrendit">GitHubista</a>.</p>
 </template>
