add category headings, few tweaks

--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -1,21 +1,21 @@
 <template name="navbar">
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"
-    style="background-image: linear-gradient(to right, red , green);">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+          aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/" style="color: white;">Koronatrendit</a>
+        <a class="navbar-brand" href="/">Koronatrendit</a>
 
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{{pathFor 'about'}}" style="color: white;">Mikä tämä on?</a></li>
-        <li><a href="{{pathFor 'newQuestion'}}" style="color: white;">Lisää uusi</a></li>
+          <li><a href="{{pathFor 'about'}}">Mikä tämä on?</a></li>
+          <li><a href="{{pathFor 'newQuestion'}}">Lisää uusi</a></li>
         </ul>
       </div>
     </div>
